<resources>
    <string name="app_name">PracticalTest01Var02</string>
    <string name="action_settings">Settings</string>

    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="hint">Write a number</string>
    <string name="result">Result</string>

    <string name="SecondActivity">Navigate to secondary activity</string>

    <string name="title_activity_practical_test01_var02_secondary">Secondary activity</string>

    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
</resources>
